Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Employee__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <length>60</length>
    <type>Text</type>
</CustomField>