Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Employee__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <label>Employee Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>