Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Employee__c/fields/Overall_Training_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Training_Score__c</fullName>
    <label>Overall Training Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>