Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Employee__c/fields/Trainin__c.field-meta.xml
<CustomField>
    <fullName>Trainin__c</fullName>
    <label>Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Needs Retraining</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>